[project]
name = "proj-test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sadman Naib", email = "sadman@compgeom.com"},
]
dependencies = [
    "pyproj>=3.6.1",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
